haciendo excepciones personalizadas y arreglar errores de sonarqube